--- a/default.config.yml
+++ b/default.config.yml
@@ -39,7 +39,6 @@ homebrew_installed_packages:
   - autoconf
   - bash-completion
   - git
-  - github/gh/gh
   - gnupg
   - ssh-copy-id
   - readline
@@ -52,7 +51,9 @@ homebrew_installed_packages:
   - fzf
   - warrensbox/tap/tfswitch
   - warrensbox/tap/tgswitch
-  - git-secret
+  - awscli
+  - direnv
+  - helm
 
 homebrew_taps:
   - homebrew/core
